--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <!-- main-content -->
     <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-        <header class="flex pt-10 mb-20">
+        <header class="lg:flex pt-10 mb-20">
             <div>
                 <h1 class="text-7xl	">It's good <br>
                     tea time at The <br> Tea House</h1>
@@ -42,23 +42,63 @@
                     More <i class="fa-solid fa-arrow-right -rotate-45"></i>
                 </button>
             </div>
-         <div class="relative">
-            <div>
-                <img class="w-full" src="images/banner.png" alt="">
+            <div class="relative">
+                <div>
+                    <img class="w-full" src="images/banner.png" alt="">
+                </div>
+                <!-- card -->
+                <div
+                    class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                    <div>
+                        <i class="fa-solid fa-star text-2xl text-amber-500"></i>
+                    </div>
+                    <div class="ml-2">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500">Trust Pilot Ratings</p>
+                    </div>
+                </div>
             </div>
-            <!-- card -->
-           <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
-            <div>
-                <i class="fa-solid fa-star text-2xl text-amber-500"></i>
-             </div>
-             <div class="ml-2">
-<h2 class="lg:text-2xl font-bold">5.00</h2>
-<p class="text-gray-500">Trust Pilot Ratings</p>
-             </div>
-           </div>
-         </div>
         </header>
-       
+        <!-- feature product section -->
+        <section class="py-8 lg:py-24">
+            <div class="text-center mb-8">
+                <h2 class="text-3xl lg:text-4xl font-bold mb-2">Our Featured Products</h2>
+                <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, <br> by injected humour, or randomised words which
+                    don't look even slightly believable. </p>
+            </div>
+            <!-- grid card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center">
+                <div class="rounded-lg shadow-md bg-gray-50 bg-gradient-to-t from-white to-gray-100 overflow-hidden">
+                    <img class="mx-auto pt-7 pb-7" src="images/tea-1.png" alt="">
+                    <div class="px-7 pb-7">
+                        <h4 class="text-2xl font-bold">Milk Tea</h4>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 bg-gradient-to-t from-white to-gray-100 overflow-hidden">
+                    <img class="mx-auto pt-7 pb-7" src="images/tea-2.png" alt="">
+                    <div class="px-7 pb-7">
+                        <h4 class="text-2xl font-bold">Black Tea</h4>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 bg-gradient-to-t from-white to-gray-100 overflow-hidden">
+                    <img class="mx-auto pt-7 pb-7" src="images/tea-3.png" alt="">
+                    <div class="px-7 pb-7">
+                        <h4 class="text-2xl font-bold">Lemon Tea</h4>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <div class="rounded-lg shadow-md bg-gray-50 bg-gradient-to-t from-white to-gray-100 overflow-hidden">
+                    <img class="mx-auto pt-7 pb-7" src="images/tea-4.png" alt="">
+                    <div class="px-7 pb-7">
+                        <h4 class="text-2xl font-bold">Green Tea</h4>
+                        <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
