--- a/index.html
+++ b/index.html
@@ -99,6 +99,43 @@
                 </div>
             </div>
         </section>
+        <!-- great tea section -->
+        <section class="mb-32">
+            <div class="grid grid-cols-1 lg:grid-cols-2">
+                <!-- image-section -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-7 lg:w-5/6">
+                    <div class="h-32 bg-gradient-to-r from-red-100 to-orange-50 rounded-lg">
+                    </div>
+                    <div class="bg-orange-50 rounded-lg row-span-2">
+                        <img class="mx-auto py-5" src="images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-orange-50 rounded-lg row-span-2">
+                        <img class="mx-auto py-5" src="images/fresh-2.png" alt="">
+                    </div>
+                    <div class="h-32 bg-gradient-to-r from-stone-200 to-stone-100 rounded-lg">
+                    </div>
+                </div>
+                <!-- text -->
+                <div>
+                    <h1 class="text-4xl font-bold mb-5	">Great Tea, Freshly Presented</h1>
+                    <br>
+                    <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor
+                        from all possessions . It represents the highest quality and self expectation. Establishing in
+                        2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and
+                        unique customized service orginated from Taiwan.</p>
+                    <br>
+                    <h4 class="text-xl font-bold	">Unique Taste</h4>
+                    <br>
+                    <p class="text-gray-500">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
+                    <br>
+                    <h4 class="text-xl font-bold	">Premium Quality</h4>
+                    <br>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use
+                        it.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
